# unchained

./: .gitignore  .gitmodules  404.html  README.md  admin.py  db_commands.py  dev_install.sh  index.html  main.py  mkdocs.yml  models.py  models_base.py  pyproject.toml  settings.py  sitemap.xml  test_router.py  unchained-cli  unchained.py
._unchained_main_app/: apps.py  models.py
.github/: ci.yml
.github/workflows/: build-and-publish.yml  build.yml  ci.yml  development.yml  documentation.yml  hello-world.yml  lint.yml  pr-comment.yml  publish.yml  release.yml
_unchained_app/: apps.py
cli/commands/: index.html
contributing/: index.html
core/admin/: index.html
core/crud/: index.html
core/dependency-injection/: index.html
core/lifespan/: index.html
core/models/: index.html
core/routing/: index.html
core/settings/: index.html
core/state/: index.html
crud/customizing/: index.html
docs/: README.md  contributing.md  index.md  quickstart.md
docs/advanced/: authentication.md
docs/cli/: commands.md
docs/cookbook/: fastapi_main.py  unchained_main.py
docs/core/: admin.md  crud.md  dependency-injection.md  lifespan.md  models.md  routing.md  settings.md  state.md
docs/dependency-injection/: intro.md  yielded-dependency.md
docs/dependency-injection/built-in/: header.md  request.md
migrations/: 0001_initial.py  0002_delete_user.py  0002_product_order_orderitem.py
quickstart/: index.html
scripts/: build.sh
search/: search_index.json
src/ninja-crud/: pyproject.toml
src/ninja-crud/src/ninja_crud/: README.md
src/unchained/: __init__.py  admin.py  base.py  errors.py  events.py  lifespan.py  meta.py  request.py  requests.py  responses.py  settings.py  signature.py  states.py  unchained.py
src/unchained/cli/: __init__.py  db.py  main.py  utils.py
src/unchained/dependencies/: __init__.py  auto.py  background_tasks.py  base.py  custom.py  depends.py  header.py  json_body.py  query_params.py
src/unchained/docs/: swagger.py
src/unchained/models/: base.py  meta.py
src/unchained/ninja/: operation.py
src/unchained/ninja_crud/: README.md
src/unchained/settings/: __init__.py  base.py  django.py
src/unchained/signature/: helpers.py  parameter.py  transformers.py
tests/: conftest.py
tests/functional/: README.md  test_advanced.py
tests/integration/: test_dependency_injection.py
tests/unit/: test_hello_world.py
tests/utils/: client.py  test_case.py  unchained_test_client.py
(+41 files in other folders)
