[project]
name = "django-unchained"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django-ninja>=1.3.0", "uvicorn>=0.34.0"]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.2"]

[tool.mypy]
files = ["unchained.py", "main.py", "models.py"]
