[project]
name = "unchained"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django-ninja>=1.3.0", "uvicorn>=0.34.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["unchained*"]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3",
    "mypy>=1.15.0",
    "pdbpp>=0.10.3",
    "ruff>=0.11.2",
]

[tool.mypy]
files = ["src/"]
