[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninja-crud"
readme = "README.md"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ninja_crud*"]

[tool.setuptools.package-data]
"ninja_crud" = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = ["src"]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "I", "N", "B", "A"]
